# Steamworks2017Vision

./: .gitignore  Dashboard.sdj  Readme.md  cameraparameters.json  camerasettings.json  purpose.txt  settings.gradle  xperia-z-camera-params.txt
app/: build.gradle
app-native/: CMakeLists.txt  build.gradle  proguard-rules.pro
app-native/src/main/: AndroidManifest.xml
app-native/src/main/cpp/: AppNative.cpp  FfmpegJNI.cpp
app-native/src/main/java/erik/android/vision/visiontest_native/: AppNative.java
app-native/src/main/java/org/ffmpeg/: FfmpegJNI.java
app-native/src/main/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/erik/android/vision/visiontest/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/erik/android/vision/visiontest/: AlarmReceiver.java  AutoFitTextureView.java  BootReceiver.java  Calibration.java  Camera2Activity.java  Communications.java  CrashRestarter.java  FpsCounter.java  ImageProcessor.java  NTBoundedNumber.java  NTClient.java  NTColorPicker.java  NTCommand.java  Parameters.java  RTPStreaming.java  VisionTestActivity.java
app/src/main/java/erik/android/vision/visiontest/calibration/: CalibrationResult.java  CameraCalibrationActivity.java  CameraCalibrator.java  OnCameraFrameRender.java
app/src/main/res/layout/: activity_camera2.xml  activity_vision_test.xml  camera_calibration_surface_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/erik/android/vision/visiontest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ntcore/: CMakeLists.txt  build.gradle
ntcore/src/main/: AndroidManifest.xml
ntcore/src/main/cpp/: Log.cpp  NetworkTablesJNI.cpp
ntcore/src/main/include/llvm/: MathExtras.h
ntcore/src/main/include/support/: jni_util.h
ntcore/src/main/java/edu/wpi/first/wpilibj/tables/: IRemoteConnectionListener.java  ITableListener.java
ntcore/src/main/res/values/: strings.xml
openCVLibrary310/: build.gradle
openCVLibrary310/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
